--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "source-map-support": "^0.5.21",
     "ts-node": "^10.9.2",
     "tslib": "^2.6.3",
+    "tslog": "^4.9.3",
     "typescript": "^5.5.3",
     "typescript-eslint": "^7.15.0",
     "yaml": "^2.4.5"
